# sample_fastapi

./: .env  .gitignore  .travis.yaml  .travis.yml  README.md  main.py  pyproject.toml  requirements.txt
src/: .env  __init__.py  app.py
src/client/: crud.py
src/models/: __init__.py  database.py  schemas.py
tests/: conftest.py  test_app.py
